# simple-platformer

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  Main.cpp  Resources.hpp  config.hh  data.corrade
src/object/: CMakeLists.txt  Cube.hpp
src/ui/: CMakeLists.txt  Framerate.hpp  Title.hpp
